; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_mgn_opt_sound.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_mgn_opt_sound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PicoOpt = common dso_local global i32 0, align 4
@POPT_EN_STEREO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"stereo\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"mono\00", align 1
@static_buff = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [9 x i8] c"%5iHz %s\00", align 1
@PsndRate = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32*)* @mgn_opt_sound to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @mgn_opt_sound(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %4, align 8
  store i32 -8, i32* %6, align 4
  %7 = load i32, i32* @PicoOpt, align 4
  %8 = load i32, i32* @POPT_EN_STEREO, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0)
  store i8* %12, i8** %5, align 8
  %13 = load i8*, i8** @static_buff, align 8
  %14 = load i32, i32* @PsndRate, align 4
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @sprintf(i8* %13, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %14, i8* %15)
  %17 = load i8*, i8** @static_buff, align 8
  ret i8* %17
}

declare dso_local i32 @sprintf(i8*, i8*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
